<resources>
    <string name="app_name">Wine Vision</string>
    <string name="reservar">reservar</string>
    <string name="configurações">configurações</string>
    <string name="corReserva">Mesas Reservas</string>
    <string name="corPadrao">Mesas Disponiveis</string>
    <string name="edit_login_acesso">Login</string>
    <string name="edit_senha_acesso">Senha de acesso</string>
    <string name="btn_entrar">ENTRAR</string>
    <string name="btn_registrar">REGISTRAR</string>
    <string name="mesa1">mesa1</string>
    <string name="mesa2">mesa2</string>
    <string name="mesa3">mesa3</string>
    <string name="mesa4">mesa4</string>
    <string name="mesa5">mesa5</string>
    <string name="mesa6">mesa6</string>
    <string name="mesa7">mesa7</string>
    <string name="mesa8">mesa8</string>
    <string name="mesa9">mesa9</string>
    <string name="salvar">salvar</string>
    <string name="digite_o_seu_nome">Digite o seu Nome</string>
    <string name="dados_do_vinho">Dados do Vinho</string>
    <string name="nome_do_vinho">NOME DO VINHO</string>
    <string name="tipo_de_vinho">TIPO DE VINHO</string>
    <string name="ano_do_vinho">ANO DO VINHO</string>
    <string name="pre_o">PREÇO</string>
    <string name="salvar_vinho">SALVAR</string>
    <string name="gerar_relat_rio">Gerar Relatório</string>
    <string name="relat_rio_por_cliente">RELATÓRIO POR CLIENTE</string>
    <string name="gerar_relatorio_mensal">GERAR RELATORIO MENSAL</string>
    <string name="clientes">CLIENTES</string>
    <string name="registrar_novo_cliente">REGISTRAR NOVO CLIENTE</string>
    <string name="dados_do_cliente">Dados do Cliente</string>
    <string name="nome_completo">NOME COMPLETO</string>
    <string name="e_mail">E-MAIL</string>
    <string name="telefone">TELEFONE</string>
    <string name="endere_o">ENDEREÇO</string>
    <string name="n_mero">NÚMERO</string>
    <string name="selecionar_tipo_de_documento">SELECIONAR TIPO DE DOCUMENTO</string>
    <string name="cpf">CPF</string>
    <string name="cnpj">CNPJ</string>
    <string name="salvar_user">SALVAR</string>
    <string name="nome">Nome</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="senha">Senha</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="entrar">ENTRAR</string>
    <string name="esqueceu_sua_senha">Esqueceu sua senha?</string>
    <string name="clientes_main">CLIENTES</string>
    <string name="vinhos">VINHOS</string>
    <string name="vendas">VENDAS</string>
    <string name="relat_rio">RELATÓRIO</string>
    <string name="logout">LOGOUT</string>
    <string name="cep">CEP</string>
    <string name="digite_seu_cep">Digite seu CEP</string>
    <string name="digite_seu_endereco_completo">Digite seu Endereco Completo</string>
    <string name="digite_seu_e_mail">Digite seu E-mail</string>
    <string name="registro_de_clientes">Registro de Clientes</string>
    <string name="cpf_ou_cnpj">CPF ou CNPJ</string>
    <string name="registrar">REGISTRAR</string>
    <string name="relat_rio_de_vendas_por_cliente">Relatório de Vendas por Cliente</string>
    <string name="quantidade_total_0">Quantidade Total: 0</string>
    <string name="total_gasto_r_0_00">Total Gasto: R$ 0.00</string>
    <string name="registro_de_vendas">Registro de Vendas</string>
    <string name="selecione_o_cliente">SELECIONE O CLIENTE</string>
    <string name="selecione_o_os_vinho_s">SELECIONE O(OS) VINHO(S)</string>
    <string name="data_que_a_venda_foi_efetuada">DATA QUE A VENDA FOI EFETUADA</string>
    <string name="registrar_venda">REGISTRAR VENDA</string>
    <string name="registrar_nova_venda">REGISTRAR NOVA VENDA</string>
    <string name="registrar_novo_vinho">REGISTRAR NOVO VINHO</string>
    <string name="registro_de_vinhos">Registro de Vinhos</string>
    <string name="nome_do_vinho2">Nome do Vinho</string>
    <string name="tipo_do_vinho">TIPO DO VINHO</string>
    <string name="tinto_branco_ros_etc">Tinto, Branco, Rosé, etc.</string>
    <string name="safra">SAFRA</string>
    <string name="ano_da_safra">Ano da safra</string>
    <string name="pa_s_de_origem">PAÍS DE ORIGEM</string>
    <string name="it_lia_fran_a_brasil_etc">Itália, França, Brasil, etc.</string>
    <string name="gradua_o_alco_lica">GRADUAÇÃO ALCOÓLICA (%)</string>
    <string name="_12_5">12.5%</string>
    <string name="volume_ml">VOLUME (ML)</string>
    <string name="_750_ml">750 ml</string>
    <string name="estoque">ESTOQUE</string>
    <string name="quantidade_dispon_vel">Quantidade disponível</string>
    <string name="pre_o_r">PREÇO (R$)</string>
    <string name="pre_o_do_vinho">Preço do vinho</string>
    <string name="registrar_vinho">REGISTRAR VINHO</string>
    <string name="dispon_vel_10">Disponível: 10</string>
    <string name="qtd">Qtd</string>
</resources>