<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:paddingTop="20dp">

    <ImageView
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/RegistroVinhos"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/registro_de_vinhos"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold"
                android:fontFamily="@font/garamond"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_marginTop="20dp">

                <!-- Nome do Vinho -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/nome_do_vinho"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:paddingEnd="40dp"
                    android:fontFamily="@font/garamond"/>
                <EditText
                    android:id="@+id/editNomeVinho"
                    android:hint="@string/nome_do_vinho2"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/garamond"/>

                <!-- Tipo do Vinho -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/tipo_do_vinho"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:paddingEnd="40dp"
                    android:fontFamily="@font/garamond"/>
                <EditText
                    android:id="@+id/editTipoVinho"
                    android:hint="@string/tinto_branco_ros_etc"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/garamond"/>

                <!-- Safra -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/safra"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:paddingEnd="40dp"
                    android:fontFamily="@font/garamond"/>
                <EditText
                    android:id="@+id/editSafra"
                    android:hint="@string/ano_da_safra"
                    android:inputType="number"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/garamond"/>

                <!-- País de Origem -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/pa_s_de_origem"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:paddingEnd="40dp"
                    android:fontFamily="@font/garamond"/>
                <EditText
                    android:id="@+id/editPaisOrigem"
                    android:hint="@string/it_lia_fran_a_brasil_etc"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/garamond"/>

                <!-- Graduação Alcoólica -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/gradua_o_alco_lica"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:paddingEnd="40dp"
                    android:fontFamily="@font/garamond"/>
                <EditText
                    android:id="@+id/editGraduacaoAlcoolica"
                    android:hint="@string/_12_5"
                    android:inputType="numberDecimal"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/garamond"/>

                <!-- Volume (ml) -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/volume_ml"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:paddingEnd="40dp"
                    android:fontFamily="@font/garamond"/>
                <EditText
                    android:id="@+id/editVolume"
                    android:hint="@string/_750_ml"
                    android:inputType="number"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/garamond"/>

                <!-- Estoque -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/estoque"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:paddingEnd="40dp"
                    android:fontFamily="@font/garamond"/>
                <EditText
                    android:id="@+id/editEstoque"
                    android:hint="@string/quantidade_dispon_vel"
                    android:inputType="number"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/garamond"/>

                <!-- Preço -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/pre_o_r"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:paddingEnd="40dp"
                    android:fontFamily="@font/garamond"/>
                <EditText
                    android:id="@+id/editPreco"
                    android:hint="@string/pre_o_do_vinho"
                    android:inputType="numberDecimal"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/garamond"/>

                <Button
                    android:id="@+id/btnRegistrarVinho"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/cinza"
                    android:text="@string/registrar_vinho"
                    android:fontFamily="@font/garamond"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
