<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:paddingTop="20dp">

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/RegistroClientes"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/registro_de_clientes"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold"
                android:fontFamily="@font/garamond"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_marginTop="20dp">

                <!-- Nome Completo -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/nome_completo"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:paddingEnd="40dp"
                    android:fontFamily="@font/garamond"/>
                <EditText
                    android:id="@+id/editNome"
                    android:hint="@string/digite_o_seu_nome"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/garamond"/>

                <!-- Email -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/e_mail"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:paddingEnd="40dp"
                    android:fontFamily="@font/garamond"/>
                <EditText
                    android:id="@+id/editEmail"
                    android:hint="@string/digite_seu_e_mail"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/garamond"/>

                <!-- Telefone -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/telefone"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:paddingEnd="40dp"
                    android:fontFamily="@font/garamond"/>
                <EditText
                    android:id="@+id/editTelefone"
                    android:hint="+00 (00) 00000-0000"
                    android:inputType="phone"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/garamond"/>

                <!-- Endereço -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/endere_o"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:paddingEnd="40dp"
                    android:fontFamily="@font/garamond"/>
                <EditText
                    android:id="@+id/editEndereco"
                    android:hint="@string/digite_seu_endereco_completo"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/garamond"/>

                <!-- Número -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/cep"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:paddingEnd="40dp"
                    android:fontFamily="@font/garamond"/>
                <EditText
                    android:id="@+id/editNumero"
                    android:maxLength="8"
                    android:hint="@string/digite_seu_cep"
                    android:inputType="number"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/garamond"/>

                <!-- RadioGroup para selecionar CPF ou CNPJ -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/selecionar_tipo_de_documento"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:paddingEnd="40dp"
                    android:fontFamily="@font/garamond"/>

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp">

                    <RadioButton
                        android:id="@+id/radioCPF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cpf"
                        android:textColor="@color/white"
                        android:fontFamily="@font/garamond"/>

                    <RadioButton
                        android:id="@+id/radioCNPJ"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cnpj"
                        android:textColor="@color/white"
                        android:fontFamily="@font/garamond"/>
                </RadioGroup>

                <EditText
                    android:id="@+id/editDocumento"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:inputType="number"
                    android:hint="@string/cpf_ou_cnpj"
                    android:textColorHint="@color/white"
                    android:fontFamily="@font/garamond"/>

                <Button
                    android:id="@+id/btnRegistrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/cinza"
                    android:text="@string/registrar"
                    android:fontFamily="@font/garamond"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
